Make count picker content position absolute. Fix z-indexes.

--- a/src/components/count-picker/count-picker.scss
+++ b/src/components/count-picker/count-picker.scss
@@ -3,12 +3,17 @@
 @import 'src/components/button/button.scss';
 
 .count-picker {
+  position: relative;
   max-width: 320px;
 
   &__content {
+    position: absolute;
+    z-index: 1;
     padding: 7px 7px 7px 15px;
     display: none;
     box-sizing: border-box;
+    width: 100%;
+    background: #fff;
     border: 1px solid transparentize($color-dark-shade, 0.5);
     border-radius: 0 0 4px 4px;
     box-shadow: 0 10px 20px transparentize($color-dark-shade, 0.95);
